--- a/styles.css
+++ b/styles.css
@@ -46,4 +46,26 @@ body {
 }
 
 
+.resume-section {
+    background-color: darksalmon;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    margin: 20px;
+    border-radius: 10px;
+}
+
+.job > h1 {
+    font-size: 1.2rem;
+    padding-right: 0;
+}
+
+.job > li {
+    list-style-type: none;
+
+}
+
+
+
+
 
